tests/parser/invalidinput/multidecl3.idp
#include <mx>

vocabulary V{
	type Struct is int
}